name:              web3
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         web3
    hs-source-dirs: .

    main-is:           main.hs

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , persistent                    >= 2.0        && < 2.3
                 , text
                 , persistent-postgresql
                 , monad-logger
                 , time
                
